[package]
name = "candle-sampling"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "0.7.2"
candle-nn = "0.7.2"
candle-transformers = "0.7.2"
rand = "0.8.5"
serde = "1.0.210"
tokenizers = "0.20.1"
